--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.62.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "connectkit": "^1.8.2",
     "framer-motion": "^11.13.1",
     "lucide": "^0.468.0",
     "lucide-react": "^0.468.0",
-    "next": "15.0.3",
+    "next": "^15.0.4",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "2.x",
+    "wagmi": "^2.13.4"
   },
   "devDependencies": {
     "typescript": "^5",
